# rshioaji

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.alpine  Dockerfile.macos  Dockerfile.python  LICENSE-MIT  README.md  build.rs  docker-build.sh  env.example  實作總結.md
docs/: callback_usage.md  environment_setup.md  implementation_todo.md  linting_guide.md  login_flow.md
examples/: basic_usage.rs  callback_example.rs  clean_usage.rs  complete_login_example.rs  contract_access_example.rs  env_config_example.rs  final_validation_report.rs  simple_test.rs  test_callback_mechanism.rs  test_callbacks_basic.rs  test_callbacks_v0_3.rs  test_complete_system.rs  test_datetime_fix.rs  test_global_callbacks.rs  test_login.rs  test_login_system.rs  tick_subscription_test.rs  v0_4_0_callback_demo.rs  validate_python_compatibility.rs
src/: bindings.rs  callbacks.rs  client.rs  config.rs  error.rs  event_bridge.rs  lib.rs  main.rs  platform.rs  shioaji_integration.rs  utils.rs
src/types/: accounts.rs  constants.rs  contracts.rs  market_data.rs  mod.rs  orders.rs  positions.rs
tests/: integration_test.rs
