[package]
name = "rshioaji"
version = "0.1.1"
authors = ["Steve Lo <info@sd.idv.tw>"]
edition = "2021"
description = "Rust wrapper for Taiwan Shioaji API - A high-performance trading library"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/stevelo/rshioaji"
repository = "https://github.com/stevelo/rshioaji"
documentation = "https://docs.rs/rshioaji"
keywords = ["shioaji", "trading", "taiwan", "stock", "api"]
categories = ["api-bindings", "finance"]
exclude = [
    ".env*",
    "docker-build.sh",
    "Dockerfile*",
    ".dockerignore"
]

[dependencies]
# Python FFI
pyo3 = { version = "0.20", features = ["auto-initialize"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Date/time with speed optimizations
chrono = { version = "0.4", features = ["serde"] }
# Base58 encoding/decoding (equivalent to based58)
bs58 = "0.5"
# Environment variables and .env file support
dotenvy = "0.15"
# Logging
log = "0.4"
env_logger = "0.10"
# Command line
clap = { version = "4.0", features = ["derive"] }
# Async traits
async-trait = "0.1"
# Optional Sentry integration
sentry = { version = "0.32", optional = true }

[lib]
name = "rshioaji"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rshioaji-cli"
path = "src/main.rs"

# Platform-specific configurations
[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies if needed

# Target-specific configurations for Python wheel compatibility
[target.aarch64-apple-darwin]
# macOS ARM64 (Apple Silicon)

[target.x86_64-unknown-linux-gnu]
# Linux x86_64 (manylinux compatible)

# Build dependencies
[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

# Static linking configuration
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[features]
default = []
static-link = []
# Speed optimizations (equivalent to shioaji[speed])
speed = ["chrono/clock"]
sentry = ["dep:sentry"]

[dev-dependencies]
tempfile = "3.0"

